added basic profile handlers without database connection
