# models/user.go
@@ -1,18 +1,29 @@
 package models
 
+import (
+	"time"
+)
+
 type User struct {
-	ID       int    `json:"id"`
-	Username string `json:"username"`
-	Password string `json:"password"`
-	Email    string `json:"email"`
-	Role     string `json:"role"`
+	ID        int        `json:"id"`
+	FirstName string     `json:"first_name"`
+	LastName  string     `json:"last_name"`
+	Email     string     `json:"email"`
+	Password  string     `json:"password"`
+	Role      string     `json:"role"`
+	Phone     string     `json:"phone"`
+	Gender    string     `json:"gender"`
+	Age       int        `json:"age"`
+	Weight    float32    `json:"weight"`
+	Height    float32    `json:"height"`
+	CreatedAt *time.Time `json:"created_at"`
+	UpdatedAt *time.Time `json:"updated_at"`
 }
 
-type UserCreateModel struct {
-	Name           string `json:"name" example:"John Doe"`
-	Phone          string `json:"phone"`
-	Email          string `json:"email"`
-	DeviceID       string `json:"device_id"`
-	Password       string `json:"password"`
-	ConfirmPassword string `json:"confirm_password"`
+type UserRegisterModel struct {
+	FirstName       string `json:"first_name" binding:"required"`
+	LastName        string `json:"last_name" binding:"required"`
+	Email           string `json:"email" binding:"required,email"`
+	Password        string `json:"password" binding:"required,min=8"`
+	ConfirmPassword string `json:"confirm_password" binding:"required,min=8"`
 }
